# igvm

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  SUPPORT.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: rust.yml
igvm/: Cargo.toml
igvm/src/: c_api.rs  hv_defs.rs  lib.rs  page_table.rs  parsing.rs  registers.rs  serializer.rs  snp_defs.rs
igvm/src/corim/: mod.rs
igvm/src/corim/launch_measurement/: builder.rs  mod.rs  profile.rs
igvm/src/measurement/: mod.rs  snp.rs  tdx.rs  vbs.rs
igvm_c/: Makefile  README.md  cbindgen_igvm.toml  cbindgen_igvm_defs.toml  igvm.pc  igvm.pc.in
igvm_c/sample/: dump_igvm.c
igvm_c/scripts/: post_process.sh
igvm_c/test_data/: Cargo.toml
igvm_c/test_data/src/: main.rs
igvm_c/tests/: igvm_test.c
igvm_defs/: Cargo.toml
igvm_defs/src/: dt.rs  lib.rs
