# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[workspace]
resolver = "2"
members = [
    "igvm",
    "igvm_c/test_data",
]

[workspace.dependencies]
igvm_defs = { path = "igvm_defs", version = "0.1.3" }
igvm = { path = "igvm", version = "0.1.3" }

anyhow = "1.0"
bitfield-struct = "0.5"
crc32fast = { version = "1.3.2", default-features = false }
hex = "0.4"
open-enum = "0.4.1"
range_map_vec = "0.1.0"
static_assertions = "1.1"
thiserror = "1.0"
tracing = "0.1"
zerocopy = { version = "0.7.1", features = ["derive"] }
