# SPDX-License-Identifier: MIT OR Apache-2.0
#
# Copyright (c) 2023 SUSE LLC
#
# Author: Roy Hopkins <rhopkins@suse.de>

[package]
name = "test_data"
version = "0.1.0"
edition = "2021"
description = "Generate test data for the C API tests"
authors = ["SUSE"]

[dependencies]
igvm = { workspace = true }
igvm_defs = { workspace = true, features = ["unstable"] }

